--- a/HappyTravels/app/src/main/res/layout/fragment_emergency.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_emergency.xml
@@ -96,49 +96,49 @@
                     android:id="@+id/descriptionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Description of the place"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/timingText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Timing"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
-                    android:id="@+id/priceText"
+                    android:id="@+id/addressText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Price"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
-
-                <TextView
-                    android:id="@+id/flightsText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Flights"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:padding="@dimen/text_padding"
+                    android:text="Location"
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Phone Number"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
-                    android:id="@+id/locationText"
+                    android:id="@+id/emailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Location"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:padding="@dimen/text_padding"
+                    android:text="Email Address"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/webPage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Web Page"
+                    android:textSize="@dimen/text_size" />
 
             </LinearLayout>
 
