--- a/HappyTravels/app/src/main/res/layout/fragment_restaurant.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_restaurant.xml
@@ -96,49 +96,97 @@
                     android:id="@+id/descriptionText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Description of the place"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/timingText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Timing"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/priceText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Price"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
-                    android:id="@+id/flightsText"
+                    android:id="@+id/TypeOfFoodText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Flights"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:padding="@dimen/text_padding"
+                    android:text="Type of Food"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/menuListText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Menu"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                android:id="@+id/drinkText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/text_padding"
+                android:text="Drinks"
+                android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/cuisineText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Cuisine"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/reservationsText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Reservations"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/addressText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Location"
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
                     android:text="Phone Number"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
-                    android:id="@+id/locationText"
+                    android:id="@+id/emailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Location"
-                    android:textSize="@dimen/text_size"
-                    android:padding="@dimen/text_padding" />
+                    android:padding="@dimen/text_padding"
+                    android:text="Email Address"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:id="@+id/webPage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/text_padding"
+                    android:text="Web Page"
+                    android:textSize="@dimen/text_size" />
 
             </LinearLayout>
 
