--- a/HappyTravels/app/src/main/res/layout/fragment_emergency.xml
+++ b/HappyTravels/app/src/main/res/layout/fragment_emergency.xml
@@ -21,7 +21,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/place_name"
+                    android:id="@+id/nameText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
@@ -32,7 +32,7 @@
                     android:padding="@dimen/text_padding" />
 
                 <ImageView
-                    android:id="@+id/thumbnail"
+                    android:id="@+id/coverPhoto"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/cover_height"
                     android:background="?attr/selectableItemBackgroundBorderless"
